{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Player1Actions",
            "id": "f2d86476-80b7-45da-9f6e-7c5a3ec7a2fb",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "aab1ef94-469e-4403-b290-35c81a753c52",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveScope",
                    "type": "Value",
                    "id": "91c32843-9dd7-4529-b4b9-4e3e2b93340d",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchWeapon",
                    "type": "Button",
                    "id": "71063ce3-672c-4559-965e-f6b7773f6c5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickAttack",
                    "type": "Button",
                    "id": "54bad6b6-bf3f-4cc4-bbfa-6b64b6d36326",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ImpactAttack",
                    "type": "Button",
                    "id": "bdf1c3f6-83cb-46e4-81c1-f4333a1fc31f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a56b6c53-d55b-44ed-b1d4-a119cad2beb2",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bc5e797-affc-4a8c-bb21-d3c24d1562cc",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveScope",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82f05dcc-332a-49f3-9900-ac9e67a5a61d",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24557ccf-669e-4bee-8253-331f53aede51",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90d691d7-53aa-48d6-a6f9-436dfef444d5",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ImpactAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2Actions",
            "id": "5c9c3dfa-b214-48dc-a7fd-b223d8f3cecd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "e2e30b10-f53d-4766-97db-e8ce2d82a02a",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveScope",
                    "type": "Value",
                    "id": "76917262-597f-4afa-bcf9-737d4c8b4abd",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchWeapon",
                    "type": "Button",
                    "id": "bda4ff50-acf7-4976-afeb-492d3c372b68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickAttack",
                    "type": "Button",
                    "id": "b3e4005d-6d01-4f16-a573-d7a4e752b0b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ImpactAttack",
                    "type": "Button",
                    "id": "efa8b6e7-c2c7-40ee-863a-813ee3280181",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab6b4cc4-3d3c-498f-a9fa-a1bc6ce6bfce",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbfca3eb-01e0-4b7a-8306-d2e1de571957",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveScope",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e5cb6a8-eddc-4b03-b7b6-10ad674fae69",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ca25bf3-677f-426f-b1a7-9e204148762e",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d31252e2-6e8d-425a-86ab-577b09d6448d",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ImpactAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}